--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -13,11 +13,10 @@ debug
 algo_type monitor
 sampling 1000
 sensor xo-therm-adc
-thresholds 43000 45000 49000 70000 73000
-thresholds_clr 41000 43000 47000 68000 70000
-actions cpu0 cpu0 cpu0 cpu0+gpu cpu0+gpu
-action_info 1689600 1401600 1036800 652800+320000000
-652800+216000000
+thresholds 41000 44000 49000 55000 57000
+thresholds_clr 39000 42000 47000 53000 55000
+actions cpu0 cpu0 cpu0+gpu cpu0+gpu cpu0+gpu
+action_info 1958400 1804800 1689600+650000000 1401600+560000000 1036800+400000000
 
 [CPU_MONITOR]
 algo_type monitor
