--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -81,6 +81,16 @@
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
         </activity>
+		
+		<service
+            android:name=".PerformanceTileService"
+            android:icon="@drawable/thermal_balance"
+            android:label="@string/thermal_balance"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
 
         <service
             android:name=".DiracService"
